--- a/index.html
+++ b/index.html
@@ -4,30 +4,46 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.com/libraries/modern-normalize"
+    />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <title>WebStudio</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
+        <a class="nav-logo" href="./index.html">WebStudio</a>
+        <ul class="btn-link">
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="link-contact">
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a class="nav-btn" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="nav-btn" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
+      <section class="heroes">
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button class="btn-order" type="button">Order Service</button>
       </section>
       <section>
         <h2>Advantages</h2>
@@ -63,9 +79,9 @@
         </ul>
       </section>
 
-      <section>
+      <section class="team-wrapper">
         <h2>Our Team</h2>
-        <ul>
+        <ul class="team-info">
           <li>
             <img
               src="./images/our-team/img-1.jpg"
@@ -112,41 +128,71 @@
         <h2>Our Portfolio</h2>
         <ul>
           <li>
-            <img src="./images/our-portfolio/img-1.jpg" alt="bankiтп app">
+            <img
+              src="./images/our-portfolio/img-1.jpg"
+              alt="bankiтп app"
+              width="360"
+              height="300"
+            />
             <h3>Banking App</h3>
             <p>App</p>
           </li>
           <li>
-            <img src="./images/our-portfolio/img-2.jpg" alt="cashless payment">
+            <img
+              src="./images/our-portfolio/img-2.jpg"
+              alt="cashless payment"
+              width="360"
+              height="300"
+            />
             <h3>Cashless Payment</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/our-portfolio/img-3.jpg" alt="meditation app">
+            <img
+              src="./images/our-portfolio/img-3.jpg"
+              alt="meditation app"
+              width="360"
+              height="300"
+            />
             <h3>Meditation App</h3>
             <p>App</p>
           </li>
           <li>
-            <img src="./images/our-portfolio/img-4.jpg" alt="taxi service">
+            <img
+              src="./images/our-portfolio/img-4.jpg"
+              alt="taxi service"
+              width="360"
+              height="300"
+            />
             <h3>Taxi Service</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/our-portfolio/img-5.jpg" alt="screen illustration">
+            <img
+              src="./images/our-portfolio/img-5.jpg"
+              alt="screen illustration"
+              width="360"
+              height="300"
+            />
             <h3>Screen Illustrations</h3>
             <p>Design</p>
           </li>
           <li>
-            <img src="./images/our-portfolio/img-6.jpg" alt="online courses">
+            <img
+              src="./images/our-portfolio/img-6.jpg"
+              alt="online courses"
+              width="360"
+              height="300"
+            />
             <h3>Online Courses</h3>
             <p>Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer-wrapper">
+      <a class="footer-logo" href="./index.html">WebStudio</a>
+      <p class="footer-descr">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
