fix my mistakes in index.html & style.css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <header>
       <nav>
-        <a class="nav-logo" href="./index.html">WebStudio</a>
+        <a class="nav-logo-web" href="./index.html">Web<span class="nav-logo">Studio</span></a>
         <ul class="btn-link">
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -42,36 +42,36 @@
     </header>
     <main>
       <section class="heroes">
-        <h1>Effective Solutions for Your Business</h1>
+        <h1 class="topic-name">Effective Solutions for Your Business</h1>
         <button class="btn-order" type="button">Order Service</button>
       </section>
       <section>
-        <h2>Advantages</h2>
+        <h2 class="hidden-header">Advantages</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="header-name_s3">Strategy</h3>
+            <p class="s3_descr">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="header-name_s3">Punctuality</h3>
+            <p class="s3_descr">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="header-name_s3">Diligence</h3>
+            <p class="s3_descr">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="header-name_s3">Technologies</h3>
+            <p class="s3_descr">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -80,9 +80,9 @@
       </section>
 
       <section class="team-wrapper">
-        <h2>Our Team</h2>
+        <h2 class="header-team">Our Team</h2>
         <ul class="team-info">
-          <li>
+          <li class="team-card">
             <img
               src="./images/our-team/img-1.jpg"
               alt="Mark Guerrero-Product Designer"
@@ -90,9 +90,9 @@
               height="260"
             />
             <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <p class="s3_descr">Product Designer</p>
           </li>
-          <li>
+          <li class="team-card">
             <img
               src="./images/our-team/img-2.jpg"
               alt="Tom Ford-Frontend Developer"
@@ -100,9 +100,9 @@
               height="260"
             />
             <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <p class="s3_descr">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-card">
             <img
               src="./images/our-team/img-3.jpg"
               alt="Camila Garcia-Marketing"
@@ -110,9 +110,9 @@
               height="260"
             />
             <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <p class="s3_descr">Marketing</p>
           </li>
-          <li>
+          <li class="team-card">
             <img
               src="./images/our-team/img-4.jpg"
               alt="Daniel Wilson-UI Designer"
@@ -120,12 +120,13 @@
               height="260"
             />
             <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <p class="s3_descr">UI Designer</p>
           </li>
         </ul>
       </section>
+
       <section>
-        <h2>Our Portfolio</h2>
+        <h2 class="header-portfolio">Our Portfolio</h2>
         <ul>
           <li>
             <img
@@ -134,8 +135,8 @@
               width="360"
               height="300"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="name-work">Banking App</h3>
+            <p class="s3_descr">App</p>
           </li>
           <li>
             <img
@@ -144,8 +145,8 @@
               width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="name-work">Cashless Payment</h3>
+            <p class="s3_descr">Marketing</p>
           </li>
           <li>
             <img
@@ -154,8 +155,8 @@
               width="360"
               height="300"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="name-work">Meditation App</h3>
+            <p class="s3_descr">App</p>
           </li>
           <li>
             <img
@@ -164,8 +165,8 @@
               width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="name-work">Taxi Service</h3>
+            <p class="s3_descr">Marketing</p>
           </li>
           <li>
             <img
@@ -174,8 +175,8 @@
               width="360"
               height="300"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="name-work">Screen Illustrations</h3>
+            <p class="s3_descr">Design</p>
           </li>
           <li>
             <img
@@ -184,14 +185,14 @@
               width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="name-work">Online Courses</h3>
+            <p class="s3_descr">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer-wrapper">
-      <a class="footer-logo" href="./index.html">WebStudio</a>
+      <a class="footer-logo-web" href="./index.html">Web<span class="footer-logo">Studio</span></a>
       <p class="footer-descr">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
