fix for complete all conditions in index.html & style.css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <nav>
         <a class="nav-logo-web" href="./index.html">Web<span class="nav-logo">Studio</span></a>
         <ul class="btn-link">
-          <li><a href="">Studio</a></li>
+          <li><a href="./index.html">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
@@ -41,36 +41,38 @@
       </address>
     </header>
     <main>
+
       <section class="heroes">
         <h1 class="topic-name">Effective Solutions for Your Business</h1>
         <button class="btn-order" type="button">Order Service</button>
       </section>
+
       <section>
         <h2 class="hidden-header">Advantages</h2>
         <ul>
           <li>
-            <h3 class="header-name_s3">Strategy</h3>
+            <h3 class="header-name_s2">Strategy</h3>
             <p class="s3_descr">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="header-name_s3">Punctuality</h3>
+            <h3 class="header-name_s2">Punctuality</h3>
             <p class="s3_descr">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="header-name_s3">Diligence</h3>
+            <h3 class="header-name_s2">Diligence</h3>
             <p class="s3_descr">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="header-name_s3">Technologies</h3>
+            <h3 class="header-name_s2">Technologies</h3>
             <p class="s3_descr">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -89,7 +91,7 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
+            <h3 class="header-name_s3">Mark Guerrero</h3>
             <p class="s3_descr">Product Designer</p>
           </li>
           <li class="team-card">
@@ -99,7 +101,7 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
+            <h3 class="header-name_s3">Tom Ford</h3>
             <p class="s3_descr">Frontend Developer</p>
           </li>
           <li class="team-card">
@@ -109,7 +111,7 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
+            <h3 class="header-name_s3">Camila Garcia</h3>
             <p class="s3_descr">Marketing</p>
           </li>
           <li class="team-card">
@@ -119,7 +121,7 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
+            <h3 class="header-name_s3">Daniel Wilson</h3>
             <p class="s3_descr">UI Designer</p>
           </li>
         </ul>
