--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
   <body>
     <header>
       <nav>
-        <a class="nav-logo-web" href="./index.html">Web<span class="nav-logo">Studio</span></a>
         <ul class="btn-link">
+          <li>
+            <a class="nav-logo-web" href="./index.html"
+              >Web<span class="nav-logo">Studio</span></a
+            >
+          </li>
           <li><a href="./index.html">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
@@ -41,7 +45,6 @@
       </address>
     </header>
     <main>
-
       <section class="heroes">
         <h1 class="topic-name">Effective Solutions for Your Business</h1>
         <button class="btn-order" type="button">Order Service</button>
@@ -52,28 +55,28 @@
         <ul>
           <li>
             <h3 class="header-name_s2">Strategy</h3>
-            <p class="s3_descr">
+            <p class="description">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
             <h3 class="header-name_s2">Punctuality</h3>
-            <p class="s3_descr">
+            <p class="description">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
             <h3 class="header-name_s2">Diligence</h3>
-            <p class="s3_descr">
+            <p class="description">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
             <h3 class="header-name_s2">Technologies</h3>
-            <p class="s3_descr">
+            <p class="description">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -91,8 +94,8 @@
               width="264"
               height="260"
             />
-            <h3 class="header-name_s3">Mark Guerrero</h3>
-            <p class="s3_descr">Product Designer</p>
+            <h3 class="description">Mark Guerrero</h3>
+            <p class="description">Product Designer</p>
           </li>
           <li class="team-card">
             <img
@@ -101,8 +104,8 @@
               width="264"
               height="260"
             />
-            <h3 class="header-name_s3">Tom Ford</h3>
-            <p class="s3_descr">Frontend Developer</p>
+            <h3 class="description">Tom Ford</h3>
+            <p class="description">Frontend Developer</p>
           </li>
           <li class="team-card">
             <img
@@ -112,7 +115,7 @@
               height="260"
             />
             <h3 class="header-name_s3">Camila Garcia</h3>
-            <p class="s3_descr">Marketing</p>
+            <p class="description">Marketing</p>
           </li>
           <li class="team-card">
             <img
@@ -122,7 +125,7 @@
               height="260"
             />
             <h3 class="header-name_s3">Daniel Wilson</h3>
-            <p class="s3_descr">UI Designer</p>
+            <p class="description">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -137,8 +140,8 @@
               width="360"
               height="300"
             />
-            <h3 class="name-work">Banking App</h3>
-            <p class="s3_descr">App</p>
+            <h3 class="header-name_s3">Banking App</h3>
+            <p class="description">App</p>
           </li>
           <li>
             <img
@@ -147,8 +150,8 @@
               width="360"
               height="300"
             />
-            <h3 class="name-work">Cashless Payment</h3>
-            <p class="s3_descr">Marketing</p>
+            <h3 class="header-name_s3">Cashless Payment</h3>
+            <p class="description">Marketing</p>
           </li>
           <li>
             <img
@@ -157,8 +160,8 @@
               width="360"
               height="300"
             />
-            <h3 class="name-work">Meditation App</h3>
-            <p class="s3_descr">App</p>
+            <h3 class="header-name_s3">Meditation App</h3>
+            <p class="description">App</p>
           </li>
           <li>
             <img
@@ -167,8 +170,8 @@
               width="360"
               height="300"
             />
-            <h3 class="name-work">Taxi Service</h3>
-            <p class="s3_descr">Marketing</p>
+            <h3 class="header-name_s3">Taxi Service</h3>
+            <p class="description">Marketing</p>
           </li>
           <li>
             <img
@@ -177,8 +180,8 @@
               width="360"
               height="300"
             />
-            <h3 class="name-work">Screen Illustrations</h3>
-            <p class="s3_descr">Design</p>
+            <h3 class="header-name_s3">Screen Illustrations</h3>
+            <p class="description">Design</p>
           </li>
           <li>
             <img
@@ -187,14 +190,16 @@
               width="360"
               height="300"
             />
-            <h3 class="name-work">Online Courses</h3>
-            <p class="s3_descr">Marketing</p>
+            <h3 class="header-name_s3">Online Courses</h3>
+            <p class="description">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer-wrapper">
-      <a class="footer-logo-web" href="./index.html">Web<span class="footer-logo">Studio</span></a>
+      <a class="footer-logo-web" href="./index.html"
+        >Web<span class="footer-logo">Studio</span></a
+      >
       <p class="footer-descr">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
