mod -v5 in index.html & style.css

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
               >Web<span class="nav-logo">Studio</span></a
             >
           </li>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a class="nav-link" href="./index.html">Studio</a></li>
+          <li><a class="nav-link" href="">Portfolio</a></li>
+          <li><a class="nav-link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="link-contact">
@@ -45,6 +45,7 @@
       </address>
     </header>
     <main>
+
       <section class="heroes">
         <h1 class="topic-name">Effective Solutions for Your Business</h1>
         <button class="btn-order" type="button">Order Service</button>
@@ -83,7 +84,7 @@
           </li>
         </ul>
       </section>
-
+<!---SECTION # 3-->
       <section class="team-wrapper">
         <h2 class="header-team">Our Team</h2>
         <ul class="team-info">
@@ -129,7 +130,7 @@
           </li>
         </ul>
       </section>
-
+<!---SECTION # 4-->
       <section>
         <h2 class="header-portfolio">Our Portfolio</h2>
         <ul>
