--- a/index.html
+++ b/index.html
@@ -20,15 +20,13 @@
   <body>
     <header>
       <nav>
+        <a class="nav-logo-web" href="./index.html"
+          >Web<span class="nav-logo">Studio</span></a
+        >
         <ul class="btn-link">
-          <li>
-            <a class="nav-logo-web" href="./index.html"
-              >Web<span class="nav-logo">Studio</span></a
-            >
-          </li>
-          <li><a class="nav-link" href="./index.html">Studio</a></li>
-          <li><a class="nav-link" href="">Portfolio</a></li>
-          <li><a class="nav-link" href="">Contacts</a></li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="link-contact">
@@ -45,7 +43,6 @@
       </address>
     </header>
     <main>
-
       <section class="heroes">
         <h1 class="topic-name">Effective Solutions for Your Business</h1>
         <button class="btn-order" type="button">Order Service</button>
@@ -84,7 +81,7 @@
           </li>
         </ul>
       </section>
-<!---SECTION # 3-->
+      <!---SECTION # 3-->
       <section class="team-wrapper">
         <h2 class="header-team">Our Team</h2>
         <ul class="team-info">
@@ -130,7 +127,7 @@
           </li>
         </ul>
       </section>
-<!---SECTION # 4-->
+      <!---SECTION # 4-->
       <section>
         <h2 class="header-portfolio">Our Portfolio</h2>
         <ul>
