mod -v7 change header in index.html

--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
   <body>
     <header>
       <nav>
-        <a class="nav-logo-web" href="./index.html"
-          >Web<span class="nav-logo">Studio</span></a
-        >
         <ul class="btn-link">
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li>
+            <a class="nav-logo-web" href="./index.html"
+              >Web<span class="nav-logo">Studio</span></a
+            >
+          </li>
+          <li><a class="nav-link" href="">Studio</a></li>
+          <li><a class="nav-link" href="">Portfolio</a></li>
+          <li><a class="nav-link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="link-contact">
