mod -v10 change in index.html & css

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           >Web<span class="nav-logo">Studio</span></a
         >
         <ul class="btn-link">
-          <li><a class="nav-link" href="">Studio</a></li>
+          <li><a class="nav-link" href="./index.html">Studio</a></li>
           <li><a class="nav-link" href="">Portfolio</a></li>
           <li><a class="nav-link" href="">Contacts</a></li>
         </ul>
@@ -52,28 +52,28 @@
         <h2 class="hidden-header">Advantages</h2>
         <ul>
           <li>
-            <h3 class="header-name_s2">Strategy</h3>
+            <h3 class="header-name_s3">Strategy</h3>
             <p class="description">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="header-name_s2">Punctuality</h3>
+            <h3 class="header-name_s3">Punctuality</h3>
             <p class="description">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="header-name_s2">Diligence</h3>
+            <h3 class="header-name_s3">Diligence</h3>
             <p class="description">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="header-name_s2">Technologies</h3>
+            <h3 class="header-name_s3">Technologies</h3>
             <p class="description">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -92,7 +92,7 @@
               width="264"
               height="260"
             />
-            <h3 class="description">Mark Guerrero</h3>
+            <h3 class="header-name_s3">Mark Guerrero</h3>
             <p class="description">Product Designer</p>
           </li>
           <li class="team-card">
@@ -102,7 +102,7 @@
               width="264"
               height="260"
             />
-            <h3 class="description">Tom Ford</h3>
+            <h3 class="header-name_s3">Tom Ford</h3>
             <p class="description">Frontend Developer</p>
           </li>
           <li class="team-card">
