mod -v11 change in index.html & css -3

--- a/index.html
+++ b/index.html
@@ -43,12 +43,13 @@
       </address>
     </header>
     <main>
+
       <section class="heroes">
         <h1 class="topic-name">Effective Solutions for Your Business</h1>
         <button class="btn-order" type="button">Order Service</button>
       </section>
 
-      <section>
+      <section class="section_2">
         <h2 class="hidden-header">Advantages</h2>
         <ul>
           <li>
@@ -128,7 +129,7 @@
         </ul>
       </section>
       <!---SECTION # 4-->
-      <section>
+      <section class="section_4>
         <h2 class="header-portfolio">Our Portfolio</h2>
         <ul>
           <li>
@@ -193,6 +194,7 @@
           </li>
         </ul>
       </section>
+      
     </main>
     <footer class="footer-wrapper">
       <a class="footer-logo-web" href="./index.html"
