--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </ul>
       </section>
       <!---SECTION # 4-->
-      <section class="section_4>
+      <section>
         <h2 class="header-portfolio">Our Portfolio</h2>
         <ul>
           <li>
@@ -194,7 +194,7 @@
           </li>
         </ul>
       </section>
-      
+
     </main>
     <footer class="footer-wrapper">
       <a class="footer-logo-web" href="./index.html"
