--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
       </address>
     </header>
     <main>
-
       <section class="heroes">
         <h1 class="topic-name">Effective Solutions for Your Business</h1>
         <button class="btn-order" type="button">Order Service</button>
@@ -53,28 +52,28 @@
         <h2 class="hidden-header">Advantages</h2>
         <ul>
           <li>
-            <h3 class="header-name_s3">Strategy</h3>
+            <h3 class="name-block">Strategy</h3>
             <p class="description">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="header-name_s3">Punctuality</h3>
+            <h3 class="name-block">Punctuality</h3>
             <p class="description">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="header-name_s3">Diligence</h3>
+            <h3 class="name-block">Diligence</h3>
             <p class="description">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="header-name_s3">Technologies</h3>
+            <h3 class="name-block">Technologies</h3>
             <p class="description">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -93,7 +92,7 @@
               width="264"
               height="260"
             />
-            <h3 class="header-name_s3">Mark Guerrero</h3>
+            <h3 class="name-block">Mark Guerrero</h3>
             <p class="description">Product Designer</p>
           </li>
           <li class="team-card">
@@ -103,7 +102,7 @@
               width="264"
               height="260"
             />
-            <h3 class="header-name_s3">Tom Ford</h3>
+            <h3 class="name-block">Tom Ford</h3>
             <p class="description">Frontend Developer</p>
           </li>
           <li class="team-card">
@@ -113,7 +112,7 @@
               width="264"
               height="260"
             />
-            <h3 class="header-name_s3">Camila Garcia</h3>
+            <h3 class="name-block">Camila Garcia</h3>
             <p class="description">Marketing</p>
           </li>
           <li class="team-card">
@@ -123,7 +122,7 @@
               width="264"
               height="260"
             />
-            <h3 class="header-name_s3">Daniel Wilson</h3>
+            <h3 class="name-block">Daniel Wilson</h3>
             <p class="description">UI Designer</p>
           </li>
         </ul>
@@ -139,7 +138,7 @@
               width="360"
               height="300"
             />
-            <h3 class="header-name_s3">Banking App</h3>
+            <h3 class="name-block">Banking App</h3>
             <p class="description">App</p>
           </li>
           <li>
@@ -149,7 +148,7 @@
               width="360"
               height="300"
             />
-            <h3 class="header-name_s3">Cashless Payment</h3>
+            <h3 class="name-block">Cashless Payment</h3>
             <p class="description">Marketing</p>
           </li>
           <li>
@@ -159,7 +158,7 @@
               width="360"
               height="300"
             />
-            <h3 class="header-name_s3">Meditation App</h3>
+            <h3 class="name-block">Meditation App</h3>
             <p class="description">App</p>
           </li>
           <li>
@@ -169,7 +168,7 @@
               width="360"
               height="300"
             />
-            <h3 class="header-name_s3">Taxi Service</h3>
+            <h3 class="name-block">Taxi Service</h3>
             <p class="description">Marketing</p>
           </li>
           <li>
@@ -179,7 +178,7 @@
               width="360"
               height="300"
             />
-            <h3 class="header-name_s3">Screen Illustrations</h3>
+            <h3 class="name-block">Screen Illustrations</h3>
             <p class="description">Design</p>
           </li>
           <li>
@@ -189,12 +188,11 @@
               width="360"
               height="300"
             />
-            <h3 class="header-name_s3">Online Courses</h3>
+            <h3 class="name-block">Online Courses</h3>
             <p class="description">Marketing</p>
           </li>
         </ul>
       </section>
-
     </main>
     <footer class="footer-wrapper">
       <a class="footer-logo-web" href="./index.html"
